--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <div id="root"></div>
+  <div class="custom-cursor"></div>
+  <div class="custom-cursor-before"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
