--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="root"></div>
   <div class="custom-cursor"></div>
   <div class="custom-cursor-before"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 </body>
 
 </html>
