--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>✨LaCodeuseCreative</title>
 </head>
@@ -12,6 +11,7 @@
   <div id="root"></div>
   <div class="custom-cursor"></div>
   <div class="custom-cursor-before"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
