--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/LaCodeuseCreative/public/vite.svg" />
+  <script type="module" src="./src/main.jsx"></script>
   <title>✨LaCodeuseCreative</title>
 </head>
 
