--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="/LaCodeuseCreative/public/vite.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/LaCodeuseCreative/public/vite.svg" /> -->
   <script type="module" src="./src/main.jsx"></script>
   <title>✨LaCodeuseCreative</title>
 </head>
