:art: style: update HTML document title for clarity; add loading attribute to images for performance optimization; change email address in contact function

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/LOGO.svg" />
+    <script type="module" src="./src/main.jsx"></script>
+    <title>
+      Création de site web freelance | La Codeuse Créative - Guérande
+    </title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/LaCodeuseCreative/public/vite.svg" /> -->
-  <script type="module" src="./src/main.jsx"></script>
-  <title>✨LaCodeuseCreative</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <div class="custom-cursor"></div>
-  <div class="custom-cursor-before"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <div class="custom-cursor"></div>
+    <div class="custom-cursor-before"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
