--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="La Codeuse Créative, freelance web designer et développeuse front-end. Création de sites vitrines, logos et identités visuelles."
+    />
     <link rel="icon" type="image/svg+xml" href="src/assets/LOGO.svg" />
     <script type="module" src="./src/main.jsx"></script>
     <title>
